Small changes
Updated openjfx version due to vulnerability
Changed some == to .equals for strings
updated naming convention for constant BOTNAME to BOT_NAME
Exluded the disabled folder from build (also excluded in .gitignore)